[package]
name = "namada-ping-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
base64 = "0.13.0"
borsh-derive = { version = "=1.2.0" }
borsh = {version = "1.2.0", features = ["unstable__schema", "derive"]}
borsh-ext = { git = "https://github.com/heliaxdev/borsh-ext", tag = "v1.2.0" }
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4.3"
namada_parameters = { git = "https://github.com/anoma/namada", rev = "v0.31.2"}
namada_sdk = { git = "https://github.com/anoma/namada", rev = "v0.31.2", default-features = false, features = ["tendermint-rpc", "std", "async-client", "async-send", "download-params", "rand" ] }
prost = "0.12.0"
prost-types = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tendermint = "0.34.0"
tendermint-config = "0.34.0"
tendermint-proto = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"]}
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }